--- a/config/yugabyte/test/range_write/yb_colocated/insert_varying_index.yaml
+++ b/config/yugabyte/test/range_write/yb_colocated/insert_varying_index.yaml
@@ -31,22 +31,22 @@ microbenchmark:
             - create table index_test_2 (id bigint, col_int_1 int, col_int_2 int, col_int_3 int, col_int_4 int, col_int_5 int, col_int_6 int, col_int_7 int, col_int_8 int, col_int_9 int, col_int_10 int, col_varchar_1 varchar(20), col_varchar_2 varchar(20), col_varchar_3 varchar(20), col_date text, col_boolean boolean, primary key (id asc))
             - create table index_test_3 (id bigint, col_int_1 int, col_int_2 int, col_int_3 int, col_int_4 int, col_int_5 int, col_int_6 int, col_int_7 int, col_int_8 int, col_int_9 int, col_int_10 int, col_varchar_1 varchar(20), col_varchar_2 varchar(20), col_varchar_3 varchar(20), col_date text, col_boolean boolean, primary key (id asc))
             - create table index_test_4 (id bigint, col_int_1 int, col_int_2 int, col_int_3 int, col_int_4 int, col_int_5 int, col_int_6 int, col_int_7 int, col_int_8 int, col_int_9 int, col_int_10 int, col_varchar_1 varchar(20), col_varchar_2 varchar(20), col_varchar_3 varchar(20), col_date text, col_boolean boolean, primary key (id asc))
-            - create index index_test_2_idx1 on index_test_2(col_int_1 ASC);
-            - create index index_test_3_idx1 on index_test_3(col_int_1 ASC);
-            - create index index_test_3_idx2 on index_test_3(col_int_2 ASC);
-            - create index index_test_3_idx3 on index_test_3(col_int_3 ASC);
-            - create index index_test_3_idx4 on index_test_3(col_int_4 ASC);
-            - create index index_test_3_idx5 on index_test_3(col_int_5 ASC);
-            - create index index_test_4_idx1 on index_test_4(col_int_1 ASC);
-            - create index index_test_4_idx2 on index_test_4(col_int_2 ASC);
-            - create index index_test_4_idx3 on index_test_4(col_int_3 ASC);
-            - create index index_test_4_idx4 on index_test_4(col_int_4 ASC);
-            - create index index_test_4_idx5 on index_test_4(col_int_5 ASC);
-            - create index index_test_4_idx6 on index_test_4(col_int_6 ASC);
-            - create index index_test_4_idx7 on index_test_4(col_int_7 ASC);
-            - create index index_test_4_idx8 on index_test_4(col_int_8 ASC);
-            - create index index_test_4_idx9 on index_test_4(col_int_9 ASC);
-            - create index index_test_4_idx10 on index_test_4(col_int_10 ASC);
+            - create index index_test_2_idx1 on index_test_2(col_int_1 asc);
+            - create index index_test_3_idx1 on index_test_3(col_int_1 asc);
+            - create index index_test_3_idx2 on index_test_3(col_int_2 asc);
+            - create index index_test_3_idx3 on index_test_3(col_int_3 asc);
+            - create index index_test_3_idx4 on index_test_3(col_int_4 asc);
+            - create index index_test_3_idx5 on index_test_3(col_int_5 asc);
+            - create index index_test_4_idx1 on index_test_4(col_int_1 asc);
+            - create index index_test_4_idx2 on index_test_4(col_int_2 asc);
+            - create index index_test_4_idx3 on index_test_4(col_int_3 asc);
+            - create index index_test_4_idx4 on index_test_4(col_int_4 asc);
+            - create index index_test_4_idx5 on index_test_4(col_int_5 asc);
+            - create index index_test_4_idx6 on index_test_4(col_int_6 asc);
+            - create index index_test_4_idx7 on index_test_4(col_int_7 asc);
+            - create index index_test_4_idx8 on index_test_4(col_int_8 asc);
+            - create index index_test_4_idx9 on index_test_4(col_int_9 asc);
+            - create index index_test_4_idx10 on index_test_4(col_int_10 asc);
         cleanup:
             - drop table if exists index_test_1;
             - drop table if exists index_test_2;
