--- a/config/yugabyte/test/range_write/yb_colocated/insert_varying_pk_columns.yaml
+++ b/config/yugabyte/test/range_write/yb_colocated/insert_varying_pk_columns.yaml
@@ -27,10 +27,10 @@ microbenchmark:
             - drop table if exists table_test_2;
             - drop table if exists table_test_3;
             - drop table if exists table_test_4;
-            - create table table_test_1 (col_int_1 bigint, col_int_2 bigint, col_int_3 bigint, col_int_4 bigint, col_int_5 bigint, col_int_6 bigint, col_int_7 bigint, primary key (col_int_1 ASC));
-            - create table table_test_2 (col_int_1 bigint, col_int_2 bigint, col_int_3 bigint, col_int_4 bigint, col_int_5 bigint, col_int_6 bigint, col_int_7 bigint, primary key (col_int_1, col_int_2 ASC));
-            - create table table_test_3 (col_int_1 bigint, col_int_2 bigint, col_int_3 bigint, col_int_4 bigint, col_int_5 bigint, col_int_6 bigint, col_int_7 bigint, primary key (col_int_1, col_int_2 ASC, col_int_3 ASC));
-            - create table table_test_4 (col_int_1 bigint, col_int_2 bigint, col_int_3 bigint, col_int_4 bigint, col_int_5 bigint, col_int_6 bigint, col_int_7 bigint, primary key (col_int_1, col_int_2 ASC, col_int_3 ASC, col_int_4 ASC, col_int_5 ASC));
+            - create table table_test_1 (col_int_1 bigint, col_int_2 bigint, col_int_3 bigint, col_int_4 bigint, col_int_5 bigint, col_int_6 bigint, col_int_7 bigint, primary key (col_int_1 asc));
+            - create table table_test_2 (col_int_1 bigint, col_int_2 bigint, col_int_3 bigint, col_int_4 bigint, col_int_5 bigint, col_int_6 bigint, col_int_7 bigint, primary key (col_int_1 asc, col_int_2 asc));
+            - create table table_test_3 (col_int_1 bigint, col_int_2 bigint, col_int_3 bigint, col_int_4 bigint, col_int_5 bigint, col_int_6 bigint, col_int_7 bigint, primary key (col_int_1 asc, col_int_2 asc, col_int_3 asc));
+            - create table table_test_4 (col_int_1 bigint, col_int_2 bigint, col_int_3 bigint, col_int_4 bigint, col_int_5 bigint, col_int_6 bigint, col_int_7 bigint, primary key (col_int_1 asc, col_int_2 asc, col_int_3 asc, col_int_4 asc, col_int_5 asc));
 
         cleanup:
             - drop table if exists table_test_1;
