--- a/config/yugabyte/regression_pipelines/foreign_key/yugabyte/FK_G1_varyingFKconstraint_child_table_ops.yaml
+++ b/config/yugabyte/regression_pipelines/foreign_key/yugabyte/FK_G1_varyingFKconstraint_child_table_ops.yaml
@@ -1,15 +1,17 @@
-type: POSTGRES
-driver: org.postgresql.Driver
-url: jdbc:postgresql://{{endpoint}}:5432/postgres?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
+type: YUGABYTE
+driver: com.yugabyte.Driver
+url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
 username: {{username}}
 password: {{password}}
+
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
 loaderThreads: 1
 terminals: 1
 collect_pg_stat_statements: true
+use_dist_in_explain : true
+analyze_on_all_tables: true
 yaml_version: v1.0
-
 works:
     work:
         time_secs: 60
@@ -326,9 +328,9 @@ microbenchmark:
                             - util: PrimaryIntGen
                               params: [1, 1000000]
 
-            - workload: FK_G1_7_2-fk_1-parent_insert
+            - workload: FK_G1_7_2fk_insert
               run:
-                  - name: FK_G1_7_2-fk_1-parent_insert
+                  - name: FK_G1_7_2fk_insert
                     weight: 100
                     queries:
                         - query: insert into employees_with_2_fk_1_parent values(?,?,?,?,?,?,?,?);
@@ -350,9 +352,9 @@ microbenchmark:
                               - util: RandomInt
                                 params: [1,100000]
 
-            - workload: FK_G1_8_2-fk_1-parent_update
+            - workload: FK_G1_8_2fk_update
               run:
-                  - name: FK_G1_8_2-fk_1-parent_update
+                  - name: FK_G1_8_2fk_update
                     weight: 100
                     queries:
                         - query: update employees_with_2_fk_1_parent set project_id1=?, project_id2=? where id=?;
