--- a/config/yugabyte/regression_pipelines/foreign_key/yugabyte/FK_G2_varyingFKcount_parent_table_ops.yaml
+++ b/config/yugabyte/regression_pipelines/foreign_key/yugabyte/FK_G2_varyingFKcount_parent_table_ops.yaml
@@ -177,9 +177,9 @@ microbenchmark:
             
         executeRules:
 
-            - workload: FK_G2_1_parent_no-fk_update
+            - workload: FK_G2_1_no-fk_update
               run:
-                  - name: FK_G2_1_parent_no-fk_update
+                  - name: FK_G2_1_no-fk_update
                     weight: 100
                     queries:
                         - query: update projects_without_ref set uid=uid+100000 where id=?;
@@ -187,9 +187,9 @@ microbenchmark:
                             - util: PrimaryIntGen
                               params: [1, 100000]
 
-            - workload: FK_G2_2_parent_no-fk_delete
+            - workload: FK_G2_2_no-fk_delete
               run:
-                  - name: FK_G2_2_parent_no-fk_delete
+                  - name: FK_G2_2_no-fk_delete
                     weight: 100
                     queries:
                         - query: delete from projects_without_ref where id=?;
@@ -197,9 +197,9 @@ microbenchmark:
                             - util: PrimaryIntGen
                               params: [1, 100000]
 
-            - workload: FK_G2_3_parent_1-fk_update
+            - workload: FK_G2_3_1-fk_update
               run:
-                  - name: FK_G2_3_parent_1-fk_update
+                  - name: FK_G2_3_1-fk_update
                     weight: 100
                     queries:
                         - query: update projects_with_1_ref set uid=uid+100000 where id=?;
@@ -207,9 +207,9 @@ microbenchmark:
                             - util: PrimaryIntGen
                               params: [1, 100000]
 
-            - workload: FK_G2_4_parent_1-fk_delete
+            - workload: FK_G2_4_1-fk_delete
               run:
-                  - name: FK_G2_4_parent_1-fk_delete
+                  - name: FK_G2_4_1-fk_delete
                     weight: 100
                     queries:
                         - query: delete from projects_with_1_ref where id=?;
@@ -217,9 +217,9 @@ microbenchmark:
                             - util: PrimaryIntGen
                               params: [1, 100000]
 
-            - workload: FK_G2_5_parent_2-fk_1-child_update
+            - workload: FK_G2_5_2-fk_update
               run:
-                  - name: FK_G2_5_parent_2-fk_1-child_update
+                  - name: FK_G2_5_2-fk_update
                     weight: 100
                     queries:
                         - query: update projects_with_2_ref_1_child set uid1=uid1+100000, uid2=uid2+100000 where id=?;
@@ -227,9 +227,9 @@ microbenchmark:
                             - util: PrimaryIntGen
                               params: [1, 100000]
 
-            - workload: FK_G2_6_parent_2-fk_1-child_delete
+            - workload: FK_G2_6_2-fk_delete
               run:
-                  - name: FK_G2_6_parent_2-fk_1-child_delete
+                  - name: FK_G2_6_2-fk_delete
                     weight: 100
                     queries:
                         - query: delete from projects_with_2_ref_1_child where id=?;
