--- a/config/yugabyte/regression_pipelines/foreign_key/yugabyte_range/FK_G1_varyingFKconstraint_child_table_ops.yaml
+++ b/config/yugabyte/regression_pipelines/foreign_key/yugabyte_range/FK_G1_varyingFKconstraint_child_table_ops.yaml
@@ -1,7 +1,6 @@
 type: YUGABYTE
 driver: com.yugabyte.Driver
 url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
-createdb: drop database if exists yb_colocated; create database yb_colocated with colocated=true
 username: {{username}}
 password: {{password}}
 
@@ -327,9 +326,9 @@ microbenchmark:
                             - util: PrimaryIntGen
                               params: [1, 1000000]
 
-            - workload: FK_G1_7_2-fk_1-parent_insert
+            - workload: FK_G1_7_2fk_insert
               run:
-                  - name: FK_G1_7_2-fk_1-parent_insert
+                  - name: FK_G1_7_2fk_insert
                     weight: 100
                     queries:
                         - query: insert into employees_with_2_fk_1_parent values(?,?,?,?,?,?,?,?);
@@ -351,9 +350,9 @@ microbenchmark:
                               - util: RandomInt
                                 params: [1,100000]
 
-            - workload: FK_G1_8_2-fk_1-parent_update
+            - workload: FK_G1_8_2fk_update
               run:
-                  - name: FK_G1_8_2-fk_1-parent_update
+                  - name: FK_G1_8_2fk_update
                     weight: 100
                     queries:
                         - query: update employees_with_2_fk_1_parent set project_id1=?, project_id2=? where id=?;
