--- a/config/yugabyte/test/range_write/yb_colocated_terminal24/multi_statement_transaction2.yaml
+++ b/config/yugabyte/test/range_write/yb_colocated_terminal24/multi_statement_transaction2.yaml
@@ -25,8 +25,8 @@ microbenchmark:
             - DROP TABLE IF EXISTS accounts_1;
             - DROP TABLE IF EXISTS audit_table_1;
             - CREATE TABLE IF NOT EXISTS users_1(user_id_1 bigint, user_id_2 bigint, user_name_1 varchar(10), addr_1 varchar(50), bal_1 float(2), PRIMARY KEY(user_id_1 ASC, user_id_2 ASC));
-            - CREATE INDEX users_1_index_user_name ON users_1(user_name_1 ASC);
-            - CREATE INDEX users_1_index_addr ON users_1(addr_1 ASC);
+            - CREATE INDEX users_1_index_user_name ON users_1(user_name_1 ASC, addr_1 ASC);
+            - CREATE INDEX users_1_index_addr ON users_1(addr_1 ASC, user_name_1 ASC);
             - CREATE TABLE IF NOT EXISTS accounts_1(account_id_1 bigint, account_id_2 bigint, user_id_1 bigint, user_id_2 bigint, addr_1 varchar(50), bal_1 float(2), PRIMARY KEY(account_id_1 ASC, account_id_2 ASC));
             - CREATE INDEX user_accounts_addr1 ON accounts_1( user_id_1 ASC, user_id_2 ASC, addr_1 ASC);
             - CREATE INDEX user_accounts_addr2 ON accounts_1( addr_1 ASC, user_id_1 ASC, user_id_2 ASC);
@@ -111,6 +111,7 @@ microbenchmark:
                     weight: 100
                     queries:
                         - query: INSERT INTO audit_table_1(account_id_1, account_id_2, event_id_1, user_id_1, user_id_2, delta_1) VALUES(?,?,?,?,?,?)
+                          count: 10
                           bindings:
                               -   util: PrimaryIntGen
                                   count: 2
