--- a/config/yugabyte/regression_pipelines/foreign_key/yugabyte/impact_of_multiple_fk.yaml
+++ b/config/yugabyte/regression_pipelines/foreign_key/yugabyte/impact_of_multiple_fk.yaml
@@ -692,7 +692,7 @@ microbenchmark:
                   - name: FK_11_5fk_insert
                     weight: 100
                     queries:
-                        - query: insert into employees_with_5fk values(?,?,?,?,?,?,?,?,?,?,?);
+                        - query: insert into employees_with_5fk values(?,?,?,?,?,?,?,?,?,?);
                           bindings:
                               - util: PrimaryIntGen
                                 params: [1000001, 9000000]
